<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InvoiceActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textview_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:text="@string/main_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="23dp" />

        <View
            android:id="@+id/line_main"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_line"
            android:elevation="5dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <RadioGroup
            android:id="@+id/radiogroup_energy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_electricity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:drawableLeft="@drawable/electricity"
                android:elevation="5dp"
                android:padding="15dp"
                android:text="@string/electricity"
                android:textAlignment="center"
                android:textSize="19dp" />

            <RadioButton
                android:id="@+id/radio_gas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="01"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:drawableLeft="@drawable/gas"
                android:elevation="5dp"
                android:padding="15dp"
                android:text="@string/gas"
                android:textAlignment="center"
                android:textSize="19dp" />
        </RadioGroup>

        <View
            android:id="@+id/line_midle"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_line"
            android:elevation="5dp" />

        <RadioGroup
            android:id="@+id/radiogroup_domebusi"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_domestic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:drawableLeft="@drawable/house"
                android:elevation="5dp"
                android:padding="15dp"
                android:text="@string/domestic"
                android:textAlignment="center"
                android:textSize="19dp" />


            <RadioButton
                android:id="@+id/radio_business"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:drawableLeft="@drawable/business"
                android:elevation="5dp"
                android:padding="15dp"
                android:text="@string/business"
                android:textAlignment="center"
                android:textSize="19dp" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/button_main"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="13dp"
        android:background="@drawable/main_button_disabled"
        android:enabled="false"
        android:fontFamily="sans-serif-black"
        android:text="@string/main_button"
        android:textAllCaps="false"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_bar"
            android:visibility="gone" />


        <ImageButton
            android:id="@+id/button_scraping_info"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:adjustViewBounds="true"
            android:background="@color/transparent"
            android:scaleType="centerInside"
            android:visibility="gone"
            app:srcCompat="@drawable/info" />

        <TextView
            android:id="@+id/textview_scraping_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15.5sp"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>