<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:elevation="5dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_company_logo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingTop="30dp"
                android:src="@drawable/electricity" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="14dp"
            android:layout_weight="1.1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_invoice_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:paddingVertical="55dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text=""
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_fixed_rate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:paddingStart="5dp"
                    android:paddingEnd="3dp"
                    android:text="@string/fixed"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textview_fixed_rate_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:paddingEnd="0dp"
                    android:text=""
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textview_fixed_rate_euro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euro"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_final_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_final_euro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euro"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <TextView
                android:id="@+id/textview_metric_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mwh"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_info"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/main_button_enabled"
                android:elevation="10dp"
                android:ellipsize="none"
                android:maxLines="1"
                android:paddingVertical="16dp"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:singleLine="true"
                android:text="@string/info_button"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>